2015-03-13  Andrew Bennett  <andrew.bennett@imgtec.com>

	* gas/mips/r6.s: Add evp and dvp instructions.
	* gas/mips/r6.d: Likewise.
	* gas/mips/r6-n32.d: Likewise.
	* gas/mips/r6-n64.d: Likewise.

2015-03-13  Jiong Wang  <jiong.wang@arm.com>

	* gas/aarch64/diagnostic.s: New testcases.
	* gas/aarch64/diagnostic.l: New error match.

2015-03-13  Jiong Wang  <jiong.wang@arm.com>

	* gas/aarch64/tail_padding.s: New testcase.
	* gas/aarch64/tail_padding.d: New expectation file.

2015-03-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* gas/s390/zarch-z13.d: Add more z13 instructions.
	* gas/s390/zarch-z13.s: Likewise.

2015-03-05  Renlin Li  <renlin.li@arm.com>

	* gas/arm/dis-data.d: Adjust the desired output.
	* gas/arm/dis-data2.d: Ditto.

2015-03-10  Renlin Li  <renlin.li@arm.com>

	* gas/aarch64/ldst-reg-uns-imm.d: Adjust expected output.
	* gas/aarch64/ldst-reg-unscaled-imm.d: Likewise.
	* gas/aarch64/reloc-insn.d: Likewise.

2015-03-10  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/codealign.d: Add test for code section alignment.
	* gas/aarch64/codealign.s: New file.

2015-03-04  Richard Sandiford  <richard.sandiford@arm.com>

	PR gas/17843
	* gas/aarch64/tls.s, gas/aarch64/tls.d: Add test for
	R_AARCH64_TLSLE_MOVW_TPREL_G0/R_AARCH64_TLSLE_MOVW_TPREL_G1_NC
	sequence.

2015-02-28  Alan Modra  <amodra@gmail.com>

	* gas/sparc/pcrel.d: Update for changed padding in data sections.
	* gas/sparc/pcrel64.d: Likewise.

2015-02-26  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* gas/aarch64/diagnostic.s: Add LDR test.
	* gas/aarch64/diagnostic.l: Likewise.

2015-02-26  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* gas/aarch64/diagnostic.s: Add ADR test.
	* gas/aarch64/diagnostic.l: Likewise.

2015-02-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gas/avr/avr-prop-1.d: New file.
	* gas/avr/avr-prop-1.s: New file.

2015-02-25  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
	    Oleg Endo  <olegendo@gcc.gnu.org>
